--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,8 @@
 # set(HEADER_LIST "${PROJECT_SOURCE_DIR}/include/jtest/")
 # or use glob
 file(GLOB JTEST_HEADER_LIST "${PROJECT_SOURCE_DIR}/include/jtest/*.h*") # 神奇的glob
-file(GLOB MY_HEADER_LIST "${PROJECT_SOURCE_DIR}/include/myproject/*.h*")
 # lib的设置和include是分开的
-add_library(main_library add.cpp ${JTEST_HEADER_LIST} ${MY_HEADER_LIST})
+add_library(main_library add.cpp ${JTEST_HEADER_LIST})
 
 # We need this directory, and users of our library will need it too
 target_include_directories(main_library  PUBLIC ../include)
@@ -21,3 +20,21 @@ source_group(
   PREFIX "Header Files"
   FILES ${JTEST_HEADER_LIST} ${MY_HEADER_LIST} )
 
+## 运行
+
+编译
+```shell
+rm build -rf
+cmake -S . -B build -D BUILD_TESTS=1 
+cmake --build build  
+```
+> `BUILD_TESTS`： `cmake`进行测试相关构建
+
+使用自定义测试框架：
+```shell
+./build/test/maintest
+```
+运行主程序：
+```shell
+./build/apps/app
+```
